# ChangeLog for dev-ruby/yard
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/yard/ChangeLog,v 1.88 2014/08/25 16:00:14 mrueg Exp $

  25 Aug 2014; Manuel Rüger <mrueg@gentoo.org> yard-0.8.7.3.ebuild:
  Mark amd64 stable. Bug #505920.

  13 Aug 2014; Raúl Porcel <armin76@gentoo.org> yard-0.8.7.3.ebuild,
  yard-0.8.7.3-r1.ebuild, yard-0.8.7.4.ebuild:
  Add ~sparc wrt #468536

  21 Jul 2014; Tobias Klausmann <klausman@gentoo.org> yard-0.8.7.3.ebuild:
  Stable on alpha, bug #505920

  15 Jul 2014; Hans de Graaff <graaff@gentoo.org> yard-0.8.7.3.ebuild,
  yard-0.8.7.3-r1.ebuild:
  Fix broken x86 keywords.

  14 Jul 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> yard-0.8.7.3-r1.ebuild:
  x86 stable wrt bug #505920

  18 Jun 2014; Tobias Klausmann <klausman@gentoo.org> yard-0.8.7.3-r1.ebuild:
  Keyworded on alpha, bug #513648

  18 Jun 2014; Tobias Klausmann <klausman@gentoo.org> yard-0.8.7.4.ebuild:
  Keyworded on alpha, bug #513648

  18 Jun 2014; Tobias Klausmann <klausman@gentoo.org> yard-0.8.7.3.ebuild:
  Keyworded on alpha, bug #513648

  17 Jun 2014; Tobias Klausmann <klausman@gentoo.org> yard-0.8.7.3-r1.ebuild:
  Drop alpha keyword again until ruby-gettext is fixed. bugs 513516 and 513480

  16 Jun 2014; Tobias Klausmann <klausman@gentoo.org> yard-0.8.7.3-r1.ebuild:
  Keyworded on alpha, bug #465948

  13 Jun 2014; Jeroen Roovers <jer@gentoo.org> yard-0.8.7.3.ebuild:
  Stable for HPPA (bug #505920).

  08 Jun 2014; Akinori Hattori <hattya@gentoo.org> yard-0.8.7.3.ebuild:
  ia64 stable wrt bug #505920

  01 Jun 2014; Markus Meier <maekke@gentoo.org> yard-0.8.7.3.ebuild:
  arm stable, bug #505920

*yard-0.8.7.4 (21 May 2014)

  21 May 2014; Hans de Graaff <graaff@gentoo.org> +yard-0.8.7.4.ebuild:
  Version bump.

  12 Apr 2014; Manuel Rüger <mrueg@gentoo.org> yard-0.8.7.2.ebuild,
  yard-0.8.7.3.ebuild:
  Remove ruby18 target.

*yard-0.8.7.3-r1 (01 Apr 2014)
