@@ -2,9 +2,11 @@ AUX yard-0.8.2.1-test-failures.patch 860 SHA256 4c4f1bb5d41c41927d7c805f28d15dd4
 DIST yard-0.8.7.2-git.tgz 854200 SHA256 90905223f0b3308c36c5a5387d1d36588e85bd804d700b7e20c5305fe37936df SHA512 107d9f354eddb71fdefb0664199c7f66053028e57056e32d87b38a5946bad47ad3a607f9fe7f6b672ab625880205c335df88325a2f0ab676da5d96ffe9539be7 WHIRLPOOL 355ae08966dd95aef16af80323321a5f754ceced3fe79056f674c3f5263b02bca7037e16a5f0555e656e63d907b7a82419954a917fb73019c29884e491feddaa
 DIST yard-0.8.7.3-git.tgz 854557 SHA256 d606b5780c8cbe4b4508c34a354f04a5d17609bc0cc07f272c37328e2fca0288 SHA512 96b8a128bacd005e64c3a863ac6cc7377755397c7532b5541809c8a0f5b157cd7433644887823e2d3c4435a0bded59fc2785992fdcf5ebcbf616a4ffd912f6fa WHIRLPOOL 80753671669489b2d6082029ba2b3c24c2aa57e0cdc9a5647e041c60c76f63cb51c33534aab70fb58f26b1ed5fde30a0433dd7f2ef00588273d3c71d1fb799a0
 DIST yard-0.8.7.4-git.tgz 855986 SHA256 17be618732165387178dd372fa2326a4065ba6d0c38c28daa05bdeffb38427a3 SHA512 288d29119c990db125ab1b6817556a70f01e5ab6c5cfeed9bedfbdd1bcdf3c4d779a1886ee0845072dfe337df5e6de73187a0897ac24cd28cdf4cd695afab123 WHIRLPOOL c8b8327210d0ccbd3e571a4ee9e18ec61cf1397ba92c12bcb7d59b454bda4dc3ec0791a12dc907f943fcf3e38df6b94991308097afc03147f0acd2fe46f2771d
+DIST yard-0.8.7.5-git.tgz 858961 SHA256 0941f59dea1fca721ba18fc3a7ef97e0ec41c87e65977781edd6b8c1ac69f901 SHA512 e9d9fa265acd0f4658e6a0434618bbaceaea1fa482886e0c2ad9f8adc06dad4e5cddc11e7402e0762bc2cb14b7f2cb1177d677f68908076d5754fb017ed32ed4 WHIRLPOOL ee26ba18ba6151914675396b1f11f9fa60bc52e71a5cc3d2f60e9fd46007a9daae198a59ce98d5e1619a2a7aae89409d9809fd7262fd93c8b239fafa61a7aa6a
 EBUILD yard-0.8.7.2.ebuild 1204 SHA256 31bb2df01e1afc2684e8bdf1bf757a6bb1afbce6bdd8968e65611b575e283974 SHA512 969181e30d5e25e810d62e5e915e233e57764ec9076d914544719acdcd6ed98709934b06352e2fb6d3e51c2fe08096085f17df40d59bce894b31887b5ccef0f1 WHIRLPOOL fbf07a6b3a7660e4fc6e4596188320b632410bb01d5ecb65d13d832659ac775ab5240c497d91b6cb6d40caef74b8e786b1477d2aceaaf0f76e6e5103f27253ad
 EBUILD yard-0.8.7.3-r1.ebuild 1301 SHA256 fa63766faaf75eab70329831fe380728ae93adecb278d2cae838d24c3e017ed9 SHA512 00e5f4c1073ad0111e2d3267d2a9387f9215c8ac2cad1f9538e951daebafd885d6345a33661b6202875ad7d7c8916605fb682b1a34fecadf73c83c078f5babaf WHIRLPOOL 98842ae7a3636cc5f8c7f0d798349c0a88782f6990caec1cbfe19f56d7a2ae6799cfe53de1ea3e9b82fd5708fe91947203dd104cd36da57dca4557c4b2c16578
 EBUILD yard-0.8.7.3.ebuild 1284 SHA256 51db282edcc8bf550b68c07fb6746c4976e4bd9e823db2ee76bea56b8a876064 SHA512 b4207c46e39692e222808fff9be345c9f9677bed8bb09241333235f95b6364693339464a0a6b81ed88153cc52279b26ac2d41bee8454799bfb96417495bfb691 WHIRLPOOL 6c1280057753a337a001529e8662c33fc2e66ebbf92094bf08138f9c9f8b550cb9c28d5bbdc306922ecdd673817b421025484a399b684f87d1807ba259e5609b
 EBUILD yard-0.8.7.4.ebuild 1299 SHA256 b95c359231d30d5f584c13abdeeb0f377e9d7f2fb3a12169942ed2027a11926a SHA512 4b2fa0325098e5514588ef136f415af344b30c0835571bdd9f2af1fb09036efa9ddeb6fba7986e721327de9a599b4155fae53bbac60b47fd1973efdf7063e490 WHIRLPOOL cb4dbd1b52f6b1d457edef59b03f64a82d036dc25ec2808fc0c57338e108a701b36da4303a36b7716ad7ff2ddfe1bcaf872c713008642a79b93321702fde3d88
-MISC ChangeLog 10857 SHA256 9008f59a8184cf222d21e3bb96657b217c12bb818571f3359d2d005c71e45edd SHA512 c321b2af90f56e6e1123e5518b7083a9b68d46fbe3fe9e55a9ccf6f1636689775e7a2e343284784bde5b94f72ec251f4b243edfccb13adc46f5cd809b980426f WHIRLPOOL 2845fdc4a80e6197f7619ca3fab4424f83f8f2620a2f8f152069bcf4c14d1c5137bb57b67879d4f4e990db9413c424d78b879e27df6387882744098935bee4e6
+EBUILD yard-0.8.7.5.ebuild 1297 SHA256 d9f24e9e9c039c7d41a3fcce8798120518963f8ddff32244d3fe0d4031110a4d SHA512 b4d574da7e90515022a25e23143cde9440fc406e7d4acec3cdc164796be1d51391374946041684ba63b70a3ada807c4924ee496fa805a143f7f645077a2baf00 WHIRLPOOL 244eedfc2fe942e9db9c91d5bf26b89dc64296d7d3cae11060f8673770c288213f74e34963a0665c47a493c97e61b1e5e042dd72c1952f89b259d1f23a0681ec
+MISC ChangeLog 10973 SHA256 d75f3feec5ccf6d834ecbcbb224441c1961ed8a95eff09751e6c5e72d9eda649 SHA512 bc4e3464afa2cf21b570373efadbeeb8f88f6961f3684f3d7b5ffc330c86ace74e38e38656c4e759810303d5ebe97e6352521898fd7c57eadf1b2d2ac3e0f290 WHIRLPOOL 769461c6fc500d656da9ae97cfaff09feedb0c134af3ace1beb219c976ae5725ee579a770fb837fa7f2aa20f4c51888c91e727bf7e57a85ec1e23f4ade243434
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
